--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,6 @@
 ---
-name: Neat Starter
-author: Surjith S M
+name: Luxury SUV
+author: Caleb Schaefer
 url: "https://surjithctly.in/"
+description: "A top-notch luxury SUV with all the modern amenities."
+image: "static/img/luxury-suv.svg"
