--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -12,8 +12,8 @@ public_folder: "/static/img"
 local_backend: true
 # publish_mode: editorial_workflow
 collections:
-  - label: "Blog"
-    name: "blog"
+  - label: "Vehicles"
+    name: "vehicles"
     folder: "src/posts"
     create: true
     editor:
@@ -21,9 +21,9 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
-      - { label: "Author", name: "author", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Details", name: "details", widget: "markdown" }
+      - { label: "Location", name: "location", widget: "string" }
       - widget: select
         label: "tags"
         name: "tags"
