--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - { label: "Title", name: "title", widget: "string", required: true }
       - { label: "Price", name: "price", widget: "number", required: true }
       - { label: "Miles", name: "miles", widget: "number" }
-      - { label: "Date", name: "date", widget: "datetime" format: 'YYYY-MM-DD' }
+      - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "details", widget: "markdown" }
       - { label: "Image", name: "image", widget: "image", required: true }
 
