--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - { label: "Price", name: "price", widget: "number", required: true }
       - { label: "Miles", name: "miles", widget: "number" }
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "details", widget: "markdown" }
+      - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Image", name: "image", widget: "image", required: true }
 
   - label: "Settings"
