--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -25,3 +25,6 @@ collections:
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Image", name: "image", widget: "image", required: true }
+      - { label: "Image 1", name: "image1", widget: "image", required: true }
+      - { label: "Image 2", name: "image2", widget: "image", required: true }
+      - { label: "Image 3", name: "image3", widget: "image", required: true }
