--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   publish = "_site"
   command = "npm run build"
+
+[[redirects]]
+  from = "/form-submission"
+  to = "/form-submission/index.html"
+  status = 200
+  force = true  
