--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -28,3 +28,8 @@ collections:
       - { label: "Image 1", name: "image1", widget: "image", required: false }
       - { label: "Image 2", name: "image2", widget: "image", required: false }
       - { label: "Image 3", name: "image3", widget: "image", required: false }
+      - label: "Additional Images"
+        name: "additional_images"
+        widget: "list"
+        fields:
+          - { label: "Image", name: "image", widget: "image" }
