--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -28,7 +28,6 @@ collections:
       - { label: "Image 1", name: "image1", widget: "image", required: false }
       - { label: "Image 2", name: "image2", widget: "image", required: false }
       - { label: "Image 3", name: "image3", widget: "image", required: false }
-      - label: "Additional Images"
-        name: "additional_images"
-        widget: "file"
-        multiple: true
+      - { label: "Image 4", name: "image4", widget: "image", required: false }
+      - { label: "Image 5", name: "image5", widget: "image", required: false }      
+      - { label: "Image 6", name: "image6", widget: "image", required: false }      
