--- a/src/_data/reviews.yaml
+++ b/src/_data/reviews.yaml
@@ -1,5 +1,9 @@
 ---
 testimonials:
+  - text: "Thank you Caleb for selling us the truck. Definitely a great experience and great truck. I would recommend anyone looking to purchase a used vehicle to go see Caleb at Schaefer Auto in Lomira."
+    author: Curt J
+  - text: "The staff at Schaefer is so easy going. They make the car buying process comfortable and fair."
+    author: Cindi    
   - text: "Honest and reliable. Offered us the perfect car for a great price."
     author: Natalie
   - text: "Fantastic service! Very easy to work with and very courteous. Very knowledgeable."
