--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -30,3 +30,22 @@ collections:
       - { label: "Image 4", name: "image4", widget: "image", required: false }
       - { label: "Image 5", name: "image5", widget: "image", required: false }      
       - { label: "Image 6", name: "image6", widget: "image", required: false }      
+
+      - label: "Coming Soon Vehicles"
+    name: "coming-soon-vehicles"
+    folder: "src/posts-coming-soon"
+    create: true
+    editor:
+      preview: false
+    fields:
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Price", name: "price", widget: "number", required: true }
+      - { label: "Miles", name: "miles", widget: "number" }
+      - { label: "Description", name: "description", widget: "markdown" }
+      - { label: "Image", name: "image", widget: "image", required: true }
+      - { label: "Image 1", name: "image1", widget: "image", required: false }
+      - { label: "Image 2", name: "image2", widget: "image", required: false }
+      - { label: "Image 3", name: "image3", widget: "image", required: false }
+      - { label: "Image 4", name: "image4", widget: "image", required: false }
+      - { label: "Image 5", name: "image5", widget: "image", required: false }
+      - { label: "Image 6", name: "image6", widget: "image", required: false }
